--- a/src/styles/globalStyle.scss
+++ b/src/styles/globalStyle.scss
@@ -5,8 +5,8 @@
 @import './media.scss';
 
 :root {
-  --main-color: #ec6130;
-  --gray-color: #d9d9d9;
+  --main-color: #f57a00;
+  ---color: #d9d9d9;
   --darkgray-color: #878d91;
   --gray-background: #eaeeef;
   --background-color: #f8fafb;
