--- a/src/common/Nav/index.module.scss
+++ b/src/common/Nav/index.module.scss
@@ -8,7 +8,6 @@
   right: 0;
   width: 100%;
   height: 80px;
-  background-color: white;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(20px);
   z-index: 100;
@@ -46,5 +45,20 @@
     &:hover {
       color: var(--main-color);
     }
+  }
+}
+
+.toggleIcon {
+  margin-right: 1.5rem;
+  width: 5.5rem;
+  height: 5.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  cursor: pointer;
+  &:active {
+    background-color: rgb(171, 171, 171);
+    opacity: 0.8;
   }
 }
