--- a/src/components/MainIntroduce/index.module.scss
+++ b/src/components/MainIntroduce/index.module.scss
@@ -22,20 +22,21 @@
   display: flex;
   align-items: center;
   margin-top: 25rem;
-  @media (max-width: 550px) {
+  @include mobile {
     flex-direction: column;
     padding: 0 5rem;
     margin-top: 15rem;
   }
 }
 .mobileFlexReverse {
-  @media (max-width: 550px) {
+  @include mobile {
     flex-direction: column-reverse;
   }
 }
 
 .introText {
-  min-width: 700px;
+  width: 70rem;
+  min-width: 30rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -57,6 +58,7 @@
   }
 }
 .introImg {
+  width: 70rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -70,7 +72,9 @@
     transform: translateY(-15px);
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
   }
-  @media (max-width: 550px) {
+
+  @include mobile {
+    width: 100%;
     margin-top: 10rem;
   }
 }
