feat: 메인페이지 배너 컴포넌트 퍼블리싱

--- a/src/styles/globalStyle.scss
+++ b/src/styles/globalStyle.scss
@@ -6,7 +6,7 @@
 
 :root {
   --main-color: #f57a00;
-  ---color: #d9d9d9;
+  --color: #ffffff;
   --darkgray-color: #878d91;
   --gray-background: #eaeeef;
   --background-color: #f8fafb;
