--- a/src/components/MainIntroduce/index.module.scss
+++ b/src/components/MainIntroduce/index.module.scss
@@ -22,14 +22,14 @@
   display: flex;
   align-items: center;
   margin-top: 25rem;
-  @include mobile {
+  @media (max-width: 550px) {
     flex-direction: column;
     padding: 0 5rem;
     margin-top: 15rem;
   }
 }
 .mobileFlexReverse {
-  @include mobile {
+  @media (max-width: 550px) {
     flex-direction: column-reverse;
   }
 }
@@ -73,7 +73,7 @@
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
   }
 
-  @include mobile {
+  @media (max-width: 550px) {
     width: 100%;
     margin-top: 10rem;
   }
