--- a/src/components/Banner/index.module.scss
+++ b/src/components/Banner/index.module.scss
@@ -3,6 +3,11 @@
 .banner {
   background-color: #fff4ea;
   height: 35rem;
+  padding-bottom: 3rem;
+
+  @media (max-width: 550px) {
+    height: 40rem;
+  }
 }
 
 .bannerBox {
@@ -27,6 +32,7 @@
   }
   & > p {
     font-size: 2rem;
+    line-height: 3rem;
   }
   & > button {
     width: 22rem;
