--- a/src/components/Banner/index.module.scss
+++ b/src/components/Banner/index.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/media.scss';
 
 .banner {
-  background-color: #fff4ea;
+  background-color: #fffae0;
   height: 35rem;
 
   @media (max-width: 550px) {
