--- a/src/components/MainIntroduce/index.module.scss
+++ b/src/components/MainIntroduce/index.module.scss
@@ -11,7 +11,7 @@
 .introBox {
   display: flex;
   align-items: center;
-  margin-top: 25rem;
+  padding-top: 15rem;
   @media (max-width: 550px) {
     flex-direction: column;
     padding: 0 5rem;
