--- a/src/components/Banner/index.module.scss
+++ b/src/components/Banner/index.module.scss
@@ -13,7 +13,8 @@
   display: flex;
   max-width: 1100px;
   margin: 0 auto;
-  padding: 0 1rem;
+  padding: 1rem 1rem;
+  align-items: center;
 
   @include tablet {
     text-align: center;
@@ -21,12 +22,12 @@
 }
 
 .bannerText {
-  width: 55rem;
+  width: 60rem;
   & > h1 {
     font-weight: 500;
     font-size: 3.5rem;
     color: #f57a00;
-    margin: 5rem 0 3.5rem 0;
+    margin: 0rem 0 3.5rem 0;
   }
   & > p {
     font-size: 2rem;
@@ -54,7 +55,14 @@
 
 .bannerImg {
   position: relative;
-  width: 55rem;
+  width: 50rem;
   height: 35rem;
+  display: flex;
+  align-items: center;
   margin: 0 auto;
+
+  // @include tablet {
+  //   width: 45rem;
+  //   height: 25rem;
+  // }
 }
