feat: 로그인 페이지 라우팅 설정

--- a/src/styles/globalStyle.scss
+++ b/src/styles/globalStyle.scss
@@ -120,6 +120,9 @@ body {
   line-height: 1;
   font-family: 'NanumSquareAcR';
   font-size: 1.6rem;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   // font-family: 'Pretendard';
 }
 a,
