--- a/src/styles/globalStyle.scss
+++ b/src/styles/globalStyle.scss
@@ -12,6 +12,7 @@
   --background-color: #f8fafb;
   --sub-color: #5772ff;
   --basic-text-color: #4d5256;
+  --comment-background: #fff4ea;
 }
 
 html,
