--- a/src/components/AuctionPost/ProductInfoDetail/index.module.scss
+++ b/src/components/AuctionPost/ProductInfoDetail/index.module.scss
@@ -1,28 +1,4 @@
-@import '../../styles/media.scss';
-
-.productInfo {
-  display: flex;
-  align-items: center;
-  height: 100%;
-  max-width: 1200px;
-  width: 60%;
-  margin: 4rem auto;
-}
-
-.productInfoImageAndName {
-  font-size: 1.6rem;
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: var(--basic-text-color);
-
-  p {
-    font-size: 2rem;
-    margin-top: 1rem;
-  }
-}
+@import '../../../styles/media.scss';
 
 .productInfoDetail {
   display: flex;
