--- a/src/app/login/index.module.scss
+++ b/src/app/login/index.module.scss
@@ -31,12 +31,16 @@
   display: flex;
   flex-direction: column;
   cursor: pointer;
+
+  & > label {
+    font-weight: 700;
+  }
 }
 .inputBox {
   width: 350px;
   position: relative;
   & > input {
-    width: 350px;
+    width: 100%;
     height: 55px;
     border-radius: 5px;
     background-color: #ffffff;
@@ -51,9 +55,6 @@
     }
     ::placeholder {
       color: transparent;
-    }
-    @include mobile {
-      width: 300px;
     }
   }
   @include mobile {
