--- a/src/app/login/index.module.scss
+++ b/src/app/login/index.module.scss
@@ -1,8 +1,13 @@
 @import '../../styles/media.scss';
 
+.background {
+  background-color: #f8fafb;
+  height: calc(100vh - 28rem);
+}
+
 .loginPage {
   flex-grow: 1;
-  max-width: 500px;
+  max-width: 350px;
   min-width: 300px;
   display: flex;
   flex-direction: column;
