--- a/src/components/signUpPage/Select/Options/index.module.scss
+++ b/src/components/signUpPage/Select/Options/index.module.scss
@@ -1,9 +1,10 @@
 .optionBox {
+  width: 100%;
   position: absolute;
   min-width: 15rem;
   height: 15rem;
   overflow-y: scroll;
-  top: 6.5rem;
+  top: 7.5rem;
   left: 0;
   border-radius: 5px;
   background-color: white;
