--- a/src/common/Nav/index.module.scss
+++ b/src/common/Nav/index.module.scss
@@ -21,7 +21,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-size: 3.2rem;
+  font-size: 2.5rem;
   height: 100%;
   max-width: 1200px;
   width: 100%;
@@ -37,8 +37,8 @@
   cursor: pointer;
 
   & > div {
-    width: 6.5rem;
-    height: 6.5rem;
+    width: 4rem;
+    height: 4rem;
     position: relative;
     transform: rotate(10deg); /* 우측으로 2도 회전 */
   }
@@ -46,7 +46,7 @@
 
 .list {
   display: flex;
-  font-size: 2.2rem;
+  font-size: 1.8rem;
 
   & > li {
     padding: 0 2.5rem;
@@ -82,6 +82,7 @@
 
 .point {
   color: var(--main-color);
+  font-weight: 700;
 }
 
 .nonPoint {
