--- a/src/app/AuctionPost/page.module.scss
+++ b/src/app/AuctionPost/page.module.scss
@@ -3,4 +3,8 @@
 .auctionPost {
   display: flex;
   flex-direction: column;
+  max-width: 800px;
+  width: 100%;
+  margin: 4rem auto;
+  padding: 0 5rem;
 }
