--- a/src/components/auctionPostPage/Modal/index.module.scss
+++ b/src/components/auctionPostPage/Modal/index.module.scss
@@ -1,11 +1,11 @@
 @import '../../../styles/media.scss';
 
-.modalBackground{
+.modalBackground {
   width: 100vw;
   height: 100vh;
   position: fixed;
-  background-color: rgba(0,0,0,0.5);
-  top:0; 
+  background-color: rgba(0, 0, 0, 0.5);
+  top: 0;
   left: 0;
   margin: 0;
   z-index: 100;
@@ -14,43 +14,41 @@
 .modal {
   z-index: 100;
   position: fixed;
-  left: 50%; 
-  top: 50%; 
-  transform: translate(-50%, -50%); 
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
   opacity: 100%;
   background-color: white;
   width: 50rem;
   height: 30rem;
   font-size: 1.6rem;
   border-radius: 5px;
-
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
 
   label {
     margin-left: 7rem;
+    margin-bottom: 0.5rem;
   }
 
   input {
-    width: 70%;
+    width: 100%;
     height: 5rem;
     border: 0.1rem solid var(--main-color);
-    margin-top: 0.5rem;
-    margin-bottom: 1.5rem;
     border-radius: 5px;
     font-size: 1.6rem;
-    margin-left: 7rem;
     padding-left: 10px;
 
     &:focus {
       outline: 0.1rem solid var(--main-color);
     }
   }
-  
+
   button {
     width: 70%;
-    height: 3rem;
+    height: 4.5rem;
     background-color: var(--main-color);
     border-radius: 5px;
     border: none;
@@ -58,18 +56,30 @@
     font-weight: bold;
     font-size: 1.6rem;
     margin-left: 7rem;
+    cursor: pointer;
   }
+}
+
+.priceInputContainer {
+  width: 70%;
+  margin-top: 0.5rem;
+  margin-bottom: 1.5rem;
+  margin-left: 7rem;
 }
 
 .linkInputContainer {
   position: relative;
+  width: 70%;
+  margin-top: 0.5rem;
+  margin-bottom: 1.5rem;
+  margin-left: 7rem;
 }
 
 .icon {
   position: absolute;
   width: 15px;
   height: 15px;
-  top: calc(50% - 12px);
-  right: 95px;
+  top: calc(50% - 7.5px);
+  right: 15px;
   color: gray;
 }
