--- a/src/components/auctionPostPage/ProductInfoDetail/index.module.scss
+++ b/src/components/auctionPostPage/ProductInfoDetail/index.module.scss
@@ -6,47 +6,63 @@
   justify-content: center;
   font-size: 2rem;
   color: var(--basic-text-color);
-  width: 50%;
+  padding: 1rem;
 
   p {
-    width: 80%;
-    text-align: left;
-    margin: 0.5rem;
+    margin: 0.5rem 0;
 
     &:nth-child(2),
     &:nth-child(3) {
-      font-size: 1.6rem;
+      font-size: 1.4rem;
       color: var(--darkgray-color);
     }
     &:nth-child(4) {
       font-size: 1.6rem;
       margin-bottom: 1rem;
-    }
-  }
-  
-  div {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
-    span {
-      font-size: 2rem;
-      margin-left: 1rem;
-      color: var(--basic-text-color);
+      font-weight: 700;
     }
   }
 }
 
-.auctionParticipateButton{
+.profileBox {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+  & > p > span {
+    color: black;
+    margin-left: 1rem;
+  }
+}
+.profile {
+  position: relative;
+  width: 4rem;
+  height: 4rem;
+  min-width: 20px;
+  min-height: 20px;
+}
+
+.line {
+  height: 1px;
+  background-color: #e9ecef;
+}
+
+.introduce {
+  min-height: 200px;
+  padding: 5rem 0;
+}
+
+.auctionParticipateButton {
   background-color: var(--main-color);
   color: white;
   width: 18rem;
-  height: 3rem;
+  height: 5rem;
   border-radius: 5px;
+  margin: 0 auto;
   border: none;
   font-size: 1.6rem;
-  margin-top: 1rem;
+  margin-top: 5rem;
   font-weight: bold;
+
   &:hover {
     cursor: pointer;
   }
