--- a/src/components/auctionPostPage/ProductInfoImageAndName/index.module.scss
+++ b/src/components/auctionPostPage/ProductInfoImageAndName/index.module.scss
@@ -2,13 +2,13 @@
 
 .productInfoImageAndName {
   font-size: 1.6rem;
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   color: var(--basic-text-color);
-  
+  position: relative;
+  width: 100%;
+  height: 50rem;
+  border-radius: 8px;
+  margin-bottom: 1rem;
+  overflow: hidden;
   p {
     font-size: 2rem;
     margin-top: 1rem;
