--- a/src/components/auctionPage/Pagination/index.module.scss
+++ b/src/components/auctionPage/Pagination/index.module.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   margin-bottom: 10rem;
   font-size: 1.5rem;
+
   & > li {
     display: flex;
     justify-content: center;
@@ -26,13 +27,40 @@
       align-items: center;
     }
 
-    &.selected {
-      border-radius: 100%;
-      color: white;
-      background-color: #3d4a5c;
+    & > li:nth-child(1) {
+      & > a {
+        background-color: #3d4a5c;
+        border-radius: 100%;
+        color: white;
+        width: 3rem;
+        height: 3rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
     }
+  }
+  .selected {
   }
   @include mobile {
     zoom: 1.5;
+  }
+}
+
+.activePage {
+  border-radius: 100%;
+  background-color: #3d4a5c;
+  & > a {
+    color: white;
+  }
+}
+
+.Pagination_pagination__cjT7I {
+  & > li:nth-child(2) {
+    border-radius: 100%;
+    background-color: #3d4a5c;
+    & > a {
+      color: white;
+    }
   }
 }
