refactor: 게시글 페이지 레이아웃 크기 수정

--- a/src/components/auctionPage/Banner/index.module.scss
+++ b/src/components/auctionPage/Banner/index.module.scss
@@ -7,11 +7,12 @@
   @media (max-width: 550px) {
     height: 40rem;
   }
+  zoom: 0.6;
 }
 
 .bannerBox {
   display: flex;
-  max-width: 1200px;
+  max-width: 1400px;
   margin: 0 auto;
   padding: 1rem 1rem;
   align-items: center;
