--- a/src/components/postPage/PostProductInfo/index.module.scss
+++ b/src/components/postPage/PostProductInfo/index.module.scss
@@ -4,10 +4,11 @@
   width: 30rem;
   display: flex;
   flex-direction: column;
-  align-items:baseline;
-
+  align-items: baseline;
+  margin-left: 5rem;
   @include desktop {
     width: 35rem;
+    margin-left: 10rem;
   }
 
   @include mobile {
