--- a/src/components/postPage/InputBox/index.module.scss
+++ b/src/components/postPage/InputBox/index.module.scss
@@ -4,16 +4,19 @@
   width: 100%;
   position: relative;
 
-  & > input, textarea {
+  & > input,
+  textarea {
+    position: relative;
     width: 100%;
     height: 5.5rem;
+    min-height: 45px;
     border-radius: 5px;
     background-color: #ffffff;
     margin: 10px 0;
     border: 1px solid #ccc;
     outline: none;
     padding-left: 10px;
-    padding-right: 45px;
+    padding-right: 15px;
     font-size: 1.6rem;
     &:focus {
       border-color: #808080;
@@ -27,14 +30,15 @@
   & > textarea {
     height: 20rem;
     padding-top: 10px;
+    resize: none;
   }
 }
 
 .icon {
   position: absolute;
-  width: 15px;
-  height: 15px;
-  top: calc(50% - 7.5px);
+  width: 1.5rem;
+  height: 1.5rem;
+  top: calc(50% - 0.75rem);
   right: 15px;
   color: gray;
 }
