--- a/src/components/postPage/PostProductInfo/index.module.scss
+++ b/src/components/postPage/PostProductInfo/index.module.scss
@@ -14,16 +14,17 @@
   @include mobile {
     width: 50rem;
     margin-top: 5rem;
+    margin-left: 0;
   }
 }
 
 .submitButton {
   background-color: var(--main-color);
   color: #ffffff;
-  height: 3.5rem;
+  height: 35px;
   width: 100%;
   margin-top: 3rem;
-  font-size: 2rem;
+  font-size: 16px;
   font-weight: bold;
   letter-spacing: 0.5rem;
   border: none;
