refactor: 경매페이지 이벤트 버블링 적용

--- a/src/components/auctionPage/BoardList/index.module.scss
+++ b/src/components/auctionPage/BoardList/index.module.scss
@@ -10,6 +10,12 @@
     }
   }
 }
+.userImage {
+  pointer-events: none;
+}
+.userInfo {
+  pointer-events: none;
+}
 
 .shortUserBoards {
   margin: 5rem 0;
