refactor: 메인페이지 custom hook  수정

--- a/src/components/mainPage/MainIntroduce/index.module.scss
+++ b/src/components/mainPage/MainIntroduce/index.module.scss
@@ -88,3 +88,16 @@
   opacity: 1;
   transform: translateY(0);
 }
+
+.view {
+  animation: fadeIn 1s ease-in-out;
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+}
