--- a/src/components/mainPage/Banner/index.module.scss
+++ b/src/components/mainPage/Banner/index.module.scss
@@ -1,68 +1,63 @@
 @import '../../../styles/media.scss';
 
-.banner {
-  background-color: #fffae0;
-  height: 35rem;
-
-  @media (max-width: 550px) {
-    height: 40rem;
-  }
-}
-
-.bannerBox {
-  display: flex;
-  max-width: 1100px;
-  margin: 0 auto;
-  padding: 1rem 1rem;
-  align-items: center;
-
-  @include tablet {
-    text-align: center;
-  }
-}
-
-.bannerText {
-  width: 60rem;
-  & > h1 {
-    font-weight: 500;
-    font-size: 3.5rem;
-    color: #f57a00;
-    margin: 0rem 0 3.5rem 0;
-  }
-  & > p {
-    font-size: 2rem;
-    line-height: 3rem;
-  }
-  & > button {
-    width: 22rem;
-    height: 6rem;
-    margin-top: 5rem;
-    background-color: var(--main-color);
-    color: var(--color);
-    border: none;
-    border-radius: 5px;
-    font-size: 1.8rem;
-    cursor: pointer;
-
-    @include mobile {
-      margin-top: 2.5rem;
-    }
-  }
-  @include mobile {
-    text-align: center;
-  }
-}
-
-.bannerImg {
+.slider {
+  width: 100%;
+  height: 50vh;
   position: relative;
-  width: 50rem;
-  height: 35rem;
-  display: flex;
-  align-items: center;
-  margin: 0 auto;
+  overflow: hidden;
+  background-color: var(--color-dark);
 
-  // @include tablet {
-  //   width: 45rem;
-  //   height: 25rem;
-  // }
+  .slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transform: translate(-50%);
+    transition: all 0.5s ease;
+  }
+
+  .slide img {
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .current {
+    opacity: 1;
+    transform: translateX(0);
+  }
+
+  .current .content {
+    opacity: 1;
+  }
+
+  .arrow {
+    border: 2px solid white;
+    border-radius: 50%;
+    background: transparent;
+    color: black;
+    width: 5.5rem;
+    height: 5.5rem;
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 2;
+    padding: 1rem;
+  }
+
+  .arrow:hover {
+    background: white;
+  }
+
+  .next {
+    right: 4.5rem;
+    color: black;
+  }
+
+  .prev {
+    left: 4.5rem;
+    color: black;
+  }
 }
