--- a/src/components/auctionDetailPage/ProductInfo/index.module.scss
+++ b/src/components/auctionDetailPage/ProductInfo/index.module.scss
@@ -41,6 +41,7 @@
     color: black;
     margin-left: 1rem;
   }
+
   margin-bottom: 1rem;
 }
 .profile {
@@ -52,8 +53,11 @@
 }
 
 .introduce {
-  min-height: 200px;
   border-bottom: 1px solid #e9ecef;
+  min-height: 300px;
+  border: 0.5px solid var(--main-color);
+  border-radius: 5px;
+  padding: 2rem;
 }
 
 .like {
