--- a/src/app/auction/[slug]/index.module.scss
+++ b/src/app/auction/[slug]/index.module.scss
@@ -1,6 +1,7 @@
 @import '@/src/styles/media.scss';
 
 .page {
+  position: relative;
   display: flex;
   flex-direction: column;
   max-width: 800px;
