--- a/src/common/Nav/index.module.scss
+++ b/src/common/Nav/index.module.scss
@@ -7,14 +7,11 @@
   left: 0;
   right: 0;
   width: 100%;
-  height: 80px;
+  height: 50px;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(20px);
   z-index: 100;
   background-color: #ffffff;
-  @include mobile {
-    height: 50px;
-  }
 }
 
 .innerNav {
@@ -26,6 +23,7 @@
   max-width: 1200px;
   width: 100%;
   margin: 0 auto;
+  padding-right: 3rem;
 }
 
 .logo {
@@ -36,7 +34,7 @@
   padding-left: 5rem;
   cursor: pointer;
   font-weight: bold;
-  font-size: 4rem;
+  font-size: 2.5rem;
 
   & > div {
     width: 4rem;
@@ -48,7 +46,7 @@
 
 .list {
   display: flex;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   align-items: center;
 
   & > li {
@@ -94,7 +92,7 @@
   background-color: var(--main-color);
   border-radius: 5px;
   min-width: 10rem;
-  height: 5rem;
+  height: 4rem;
   transition: 0.2s all;
   margin-left: 3rem;
   &:hover {
