--- a/src/components/auctionPage/AdvertisementModal/index.module.scss
+++ b/src/components/auctionPage/AdvertisementModal/index.module.scss
@@ -1,9 +1,9 @@
 .wrapper {
   position: fixed;
   right: 45rem;
-  top: 300px;
-  width: 45rem;
-  height: 45rem;
+  top: 200px;
+  width: 35rem;
+  height: 32.5rem;
   border-radius: 10px;
   background-color: rgb(255, 255, 255);
   box-shadow:
@@ -15,33 +15,35 @@
   position: relative;
   overflow: hidden;
   width: 100%;
-  height: 35.5rem;
+  height: 25rem;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
 }
 
 .buttons {
-  height: 10rem;
+  height: 7.5rem;
   display: flex;
   justify-content: space-around;
   align-items: center;
   color: rgb(51, 51, 51);
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 .button-oneDay {
-  font-size: 2rem;
+  font-size: 1.5rem;
   width: 100%;
   cursor: pointer;
-  height: 7rem;
   background-color: white;
   border: none;
+  border-bottom-left-radius: 5px;
 }
 
 .button-close {
-  font-size: 2rem;
+  font-size: 1.5rem;
   width: 100%;
   cursor: pointer;
-  height: 7rem;
   background-color: white;
   border: none;
+  border-bottom-right-radius: 5px;
 }
